# tui-piechart

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  README.md  cliff.toml  justfile
.gitea/workflows/: ci.yml  deps-update.yml  release.yml
.github/workflows/: ci.yml  deps-update.yml  release.yml
.zed/: rules.md
examples/: border_styles.rs  custom_symbols.rs  custom_symbols.tape  high_resolution.rs  high_resolution.tape  legend_alignment.rs  legend_markers.rs  legend_positioning.rs  piechart.rs  piechart.tape  piechart_basic.rs  symbols_circles_squares.rs  symbols_circles_squares.tape  symbols_shades_bars.rs  symbols_shades_bars.tape  symbols_stars_hearts.rs  symbols_stars_hearts.tape  symbols_triangles_hexagons.rs  symbols_triangles_hexagons.tape  title_positioning.rs  title_styles.rs  title_styles_example.rs
examples/vhs/: README.md  border_styles.tape  custom_symbols.tape  generate_all.sh  high_resolution.tape  legend_alignment.tape  legend_markers.tape  legend_positioning.tape  piechart.tape  symbols_circles_squares.tape  symbols_shades_bars.tape  symbols_stars_hearts.tape  symbols_triangles_hexagons.tape  title_positioning.tape  title_styles.tape
scripts/: bump_version.nu  bump_version.sh  check_publish.nu  migrate_to_gitea.nu  release_prepare.nu  setup_gitea.nu  upgrade_deps.nu  version.nu
scripts/tests/: run_all.nu  runner.nu  test_bump_version.nu  test_check_publish.nu  test_release_prepare.nu  test_upgrade_deps.nu  test_version.nu
src/: border_style.rs  legend.rs  lib.rs  symbols.rs  title.rs
tests/: visual_test.rs
(+2 files in other folders)
