[package]
name = "tui-piechart"
version = "0.1.2"
authors = ["Sorin Albu-Irimies <sorinirimies@gmail.com>"]
edition = "2021"
rust-version = "1.74.0"
license = "MIT"
description = "A customizable pie chart widget for Ratatui TUI applications"
repository = "https://github.com/sorinirimies/tui-piechart"
homepage = "https://github.com/sorinirimies/tui-piechart"
keywords = ["tui", "terminal", "ratatui", "piechart", "widget"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
ratatui = { version = "0.29", default-features = false }

[dev-dependencies]
color-eyre = "0.6"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

[lib]
name = "tui_piechart"
path = "src/lib.rs"

[[example]]
name = "piechart"
path = "examples/piechart.rs"
